spring day security